fix: comments the 30vw so that posts don't get too small on mobile;

--- a/styles/_posts.scss
+++ b/styles/_posts.scss
@@ -8,7 +8,7 @@
 
 .posts__bkg{    
     background-color: $primary;  
-    max-width: 30vw;
+    // max-width: 30vw;
 }
 
 .post{
